--- a/pixi.toml
+++ b/pixi.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "Educational materials for the K-matrix formalism in the field of hadron physics"
 authors = ["Misha Mikhasenko <mikhail.mikhasenko@gmail.com>"]
 channels = ["conda-forge"]
-platforms = ["linux-64", "win-64"]
+platforms = ["linux-64", "osx-64", "win-64"]
 
 [dependencies]
 juliaup = ">=1.13.0"
