DX: pin Julia version with juliaup

--- a/pixi.toml
+++ b/pixi.toml
@@ -10,7 +10,10 @@ platforms = ["linux-64", "osx-64", "win-64"]
 juliaup = ">=1.13.0"
 
 [tasks]
-build = "julia --project -e 'using Pkg; Pkg.instantiate()'"
+build = { cmd = "julia --project -e 'using Pkg; Pkg.instantiate()'", depends_on = [
+    "install-julia",
+] }
+install-julia = "juliaup add 1.10.2 && juliaup default 1.10.2"
 pluto = { cmd = "julia --project -e 'using Pluto; Pluto.run(notebook=\"K-matrix.jl\")'", depends_on = [
     "build",
 ] }
