--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -25,6 +25,7 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
+      - uses: julia-actions/cache@v1
       - uses: prefix-dev/setup-pixi@v0.5.1
         with:
           cache: true
