--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -26,6 +26,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: julia-actions/cache@v1
+        with:
+          cache-name: julia-${{hashFiles('julia/Manifest.toml')}}
       - uses: prefix-dev/setup-pixi@v0.5.1
         with:
           cache: true
