--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -25,9 +25,16 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
-      - uses: julia-actions/cache@v1
+      - name: Julia cache
+        uses: actions/cache@v4
         with:
-          cache-name: julia-${{hashFiles('julia/Manifest.toml')}}
+          key: |
+            julia-${{hashFiles('Manifest.toml')}}-${{hashFiles('**/*.jl')}}
+          restore-keys: |
+            julia-${{hashFiles('Manifest.toml')}}
+            julia
+          path: |
+            ~/.julia/
       - uses: prefix-dev/setup-pixi@v0.5.1
         with:
           cache: true
