--- a/pixi.toml
+++ b/pixi.toml
@@ -8,6 +8,7 @@ platforms = ["linux-64", "osx-64", "win-64"]
 
 [dependencies]
 juliaup = ">=1.13.0"
+python = "==3.10"
 
 [tasks]
 build = { cmd = "julia --project -e 'using Pkg; Pkg.instantiate()'", depends_on = [
