DX: add Jupyter Lab to dependencies

--- a/pixi.toml
+++ b/pixi.toml
@@ -18,3 +18,10 @@ install-julia = "juliaup add 1.10.2 && juliaup default 1.10.2"
 pluto = { cmd = "julia --project -e 'using Pluto; Pluto.run(notebook=\"K-matrix.jl\")'", depends_on = [
     "build",
 ] }
+lab = "jupyter lab"
+
+[pypi-dependencies]
+jupyterlab = "*"
+jupyterlab-git = "*"
+jupyterlab-lsp = "*"
+python-lsp-server = "*"
