--- a/pixi.toml
+++ b/pixi.toml
@@ -9,6 +9,18 @@ platforms = ["linux-64", "osx-64", "win-64"]
 [dependencies]
 juliaup = ">=1.13.0"
 python = "==3.10"
+jupyterlab-git = ">=0.50.0,<0.51"
+ipywidgets = ">=8.1.2,<8.2"
+python-lsp-server = ">=1.10.1,<1.11"
+sympy = "==1.12"
+nbstripout = ">=0.7.1,<0.8"
+ampform = "==0.15"
+jupyterlab-myst = ">=2.3.1,<2.4"
+ipympl = ">=0.9.3,<0.10"
+matplotlib = ">=3.8.3,<3.9"
+plotly = "==5.18"
+jupyterlab = ">=4.1.5,<4.2"
+jupyterlab-lsp = ">=5.1.0,<5.2"
 
 [tasks]
 build = { cmd = "julia --project -e 'using Pkg; Pkg.instantiate()'", depends_on = [
@@ -23,17 +35,3 @@ pluto = { cmd = "julia --project -e 'using Pluto; Pluto.run(notebook=\"docs/K-ma
 ] }
 lab = "jupyter lab docs"
 lint = "nbstripout docs/*.ipynb"
-
-[pypi-dependencies]
-ampform = { version = "==0.15" }
-ipympl = "*"
-ipywidgets = "*"
-jupyterlab = "*"
-jupyterlab-git = "*"
-jupyterlab-lsp = "*"
-jupyterlab-myst = "*"
-matplotlib = "*"
-nbstripout = "*"
-plotly = { version = "==5.18" }
-python-lsp-server = "*"
-sympy = { version = "==1.12" }
