--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -38,11 +38,23 @@ jobs:
       - uses: prefix-dev/setup-pixi@v0.5.1
         with:
           cache: true
+      - name: Jupyter cache
+        uses: actions/cache@v4
+        with:
+          key: |
+            jupyter-cache-${{hashFiles('pixi.lock')}}-${{hashFiles('docs/*.ipynb')}}
+          restore-keys: |
+            jupyter-cache-${{hashFiles('pixi.lock')}}
+            jupyter-cache
+          path: |
+            docs/_build/.jupyter_cache
+            docs/_build/jupyter_execute
+      - run: pixi run doc-julia
       - run: pixi run doc
       - if: always()
         uses: actions/upload-pages-artifact@v3
         with:
-          path: docs/_build
+          path: docs/_build/html
 
   deploy:
     environment:
