MAINT: update Python 3.10

--- a/pixi.toml
+++ b/pixi.toml
@@ -19,7 +19,7 @@ matplotlib = ">=3.8.3,<3.9"
 myst-nb = ">=1.0.0,<1.1"
 nbstripout = ">=0.7.1,<0.8"
 plotly = "==5.18"
-python = "==3.10"
+python = ">=3.10.13,<3.11"
 python-lsp-server = ">=1.10.1,<1.11"
 sphinx-autobuild = ">=2024.2.4,<2024.3"
 sphinx-book-theme = ">=1.1.2,<1.2"
