--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,4 +1,4 @@
-name: Deploy documentation
+name: Documentation
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -60,6 +60,9 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
+    if: >-
+      github.event_name == 'workflow_dispatch' ||
+      github.event_name == 'push' && github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
     needs: build
     permissions:
       pages: write
