--- a/pixi.toml
+++ b/pixi.toml
@@ -3,7 +3,7 @@ authors = ["Misha Mikhasenko <mikhail.mikhasenko@gmail.com>"]
 channels = ["conda-forge"]
 description = "Educational materials for the K-matrix formalism in the field of hadron physics"
 name = "international-k-matrix-day"
-platforms = ["linux-64", "osx-64", "win-64"]
+platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]
 version = "0.1.0"
 
 [dependencies]
